Issue 2: Center align button in card footers

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -76,6 +76,12 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+    width: 100%; 
+  }
+
+  .card__footer .button {
+    display: block;  
+    margin: 0 auto;  
   }
 
   // .role {
